# metalake

./: .env.example  README.md  docker-compose.yml  dockerfile  makefile  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/client/: __init__.py  storage.py
src/core/: base.py  common.py  config.py  constants.py  error.py  formats.py  success.py
src/db/: __init__.py
src/db/migrations/models/: 1_20250929120935_lake.py  1_20250929191947_lake.py
src/db/model/: __init__.py  lake.py
src/repo/: __init__.py  lake.py
src/route/health/: health.py
src/route/lake/: __init__.py  crud.py
src/schema/: __init__.py  health.py  lake.py
src/service/: __init__.py  auth.py  health.py  lake.py
src/service/health/: __init__.py  health.py
